[package]
name = "ains"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4" }
serde = { version = "1.0.130", features = [ 'derive' ] }
serde_yaml = { version = "0.8.21" }
